Bug 95142 - [ES3.1CTS,GEN8] ESEXT-CTS.draw_elements_base_vertex_tests.invalid_mapped_bos assertion
Summary: [ES3.1CTS,GEN8] ESEXT-CTS.draw_elements_base_vertex_tests.invalid_mapped_bos ...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Jordan Justen
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 92778
  Show dependency treegraph
 
Reported: 2016-04-26 00:37 UTC by Jordan Justen
Modified: 2016-04-27 21:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Jordan Justen 2016-04-26 00:37:32 UTC
With the OpenGLES 3.1 CTS, I see a crash on gen8:

glcts --deqp-case=ESEXT-CTS.draw_elements_base_vertex_tests.invalid_mapped_bos

Test case 'ESEXT-CTS.draw_elements_base_vertex_tests.invalid_mapped_bos'..
glcts: vbo/vbo_exec_array.c:57: check_buffers_are_unmapped: Assertion `!_mesa_check_disallowed_mapping(obj)' failed.

Tested on Mesa ee9621e2f5653cf2dfa8589bd3a57bafb122c6bd.
Comment 1 Jordan Justen 2016-04-27 21:34:06 UTC
commit aaaa22c775f484922ccac705de41dd892e2aff4d

    vbo: Return INVALID_OPERATION during draw with a mapped buffer


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.